<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:id="@+id/gambarlyt"
            android:layout_height="220dp"
            android:background="@drawable/blur"
            tools:ignore="MissingConstraints">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/ss"
                app:civ_border_color="#c9d9e0"
                app:civ_border_width="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:background="#fff"
            android:gravity="center">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:orientation="vertical">
                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textColor="#3498db"
                    android:text="@string/pray"/>
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="center"
                    android:tint="#2980b9"
                    android:src="@drawable/prayer"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:orientation="vertical">
                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="#3498db"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text="@string/code"/>
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="5dp"
                    android:tint="#2980b9"
                    android:layout_gravity="center"
                    android:src="@drawable/code"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:orientation="vertical">
                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="#3498db"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text="@string/sleep"/>
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="5dp"
                    android:tint="#2980b9"
                    android:layout_gravity="center"
                    android:src="@drawable/moon"/>
            </LinearLayout>
        </LinearLayout>
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="453dp"
            android:background="#fff">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="Orientation">


                <android.support.v7.widget.CardView
                    android:layout_width="300dp"
                    android:layout_height="220dp"
                    app:cardCornerRadius="8dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginLeft="30dp">

                    <LinearLayout
                        android:background="@drawable/card_home_f"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/deskripsi"
                            android:textColor="#80a4b8"
                            android:textSize="15sp"
                            android:elevation="2dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_marginTop="15dp"
                            android:text="@string/swipe"
                            android:textStyle="italic"
                            android:tint="#567A8D"/>

                    </LinearLayout>


                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:layout_width="300dp"
                    android:layout_height="220dp"
                    app:cardCornerRadius="8dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginLeft="30dp">

                    <LinearLayout
                        android:background="@drawable/card_home_f"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/deskripsi"
                            android:textColor="#80a4b8"
                            android:textSize="15sp"
                            android:elevation="2dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_marginTop="15dp"
                            android:text="@string/swipe"
                            android:textStyle="italic"
                            android:tint="#567A8D"/>

                    </LinearLayout>


                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:layout_width="300dp"
                    android:layout_height="220dp"
                    app:cardCornerRadius="8dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginLeft="30dp">

                    <LinearLayout
                        android:background="@drawable/card_home_f"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/deskripsi"
                            android:textColor="#80a4b8"
                            android:textSize="15sp"
                            android:elevation="2dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_marginTop="15dp"
                            android:text="@string/swipe"
                            android:textStyle="italic"
                            android:tint="#567A8D"/>

                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>
        </HorizontalScrollView>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>